--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ bin-release/
 
 # Other files and folders
 .settings/
+.idea/
+.node_modules/
 
 # Executables
 *.swf
@@ -16,3 +18,5 @@ bin-release/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+config.json
+jsbot.iml
