--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
   "name": "untitled",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/YannicBreiting/eitbot.js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/YannicBreiting/eitbot.js/issues"
+  },
+  "homepage": "https://github.com/YannicBreiting/eitbot.js#readme",
+  "dependencies": {
+    "@discordjs/builders": "^0.6.0",
+    "@discordjs/rest": "^0.1.0-canary.0",
+    "discord.js": "^13.1.0"
+  },
+  "devDependencies": {
+    "discord-api-types": "^0.22.0"
+  },
+  "description": ""
 }
