--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eitbot.js",
   "version": "0.0.1",
-  "main": "main.js",
+  "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,7 +19,9 @@
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
-    "discord.js": "^13.1.0"
+    "discord.js": "^13.1.0",
+    "googleapis": "^39.2.0",
+    "node-fetch": "^3.0.0"
   },
   "devDependencies": {
     "discord-api-types": "^0.22.0"
