--- a/eit/guildConfig.json
+++ b/eit/guildConfig.json
@@ -1,16 +1,24 @@
 {
-    "roles": ["Gast", "Student", "Professor", "Interessent", "Moderator"],
+  "roles": [
+    "Gast",
+    "Student",
+    "Professor",
+    "Interessent",
+    "Moderator",
+    "1. Semester",
+    "2. Semester",
+    "3. Semester",
+    "4. Semester",
+    "5. Semester",
+    "6. Semester",
+    "7. Semester"
+  ],
 
-    "channels": ["kalender", "hm-feed", "botlog"],
-
-    "semesters":
-    {
-      "1": ["BAC1A", "BAC1B"],
-      "2": ["BAC2A", "BAC2B", "BAC2C", "BAC2D", "2W"],
-      "3": ["EIB3A", "RE/EM3"],
-      "4": ["EIB4A", "EIB4B", "REB4A", "EMB4A", "4W"],
-      "5": ["B5P"],
-      "6": ["EIB6A", "EIB6B", "REB6", "EMB6"],
-      "7": ["EIB7A", "REB7", "EMB7"]
-    }
+  "channels": [
+    "kalender",
+    "hm-feed",
+    "botlog"
+  ]
 }
+
+
