--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "axios": "^0.21.4",
     "discord.js": "^13.1.0",
     "googleapis": "^39.2.0",
-    "node-fetch": "^3.0.0"
+    "node-fetch": "^3.0.0",
+    "node-libcurl": "^2.3.3",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "discord-api-types": "^0.22.0"
